とりあえず影がつく

--- a/beta.html
+++ b/beta.html
@@ -84,6 +84,7 @@
                 <div><canvas id="canvas" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasAvator" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasBackgroundImg" class="rounded" style="display: none;"></canvas></div>
+                <div><canvas id="canvas_shadow" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvas_silhouette" class="rounded" style="display: none;"></canvas></div>
                 <div><img id="result" class="rounded" style="display: none;"></div>
                 <span id="saveHint"></span>
@@ -104,7 +105,7 @@
                 <div>
                     <span class="text">影</span>
                     <label class="switch">
-                        <input type="checkbox">
+                        <input id="shadow" type="checkbox">
                         <span class="slider"></span>
                     </label>
                     <span class="text">ふち</span>
