諸々試してみたやつ

--- a/beta.html
+++ b/beta.html
@@ -132,6 +132,7 @@
     </section>
     <!-- JS読み込み -->
     <script async src="js/opencv.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <script src="js/beta_main.js"></script>
 </body>
