テンプレート追加

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                 <i data-toggle="modal" data-target="#infoModalCenter" class="fas fa-question-circle"
                     style="color: #707070;"></i>
             </h5>
+
             <!-- 画像の設定と読み込み -->
             <div class="text-center items">
                 <label>
@@ -147,8 +148,60 @@
                             </div>
                         </div>
                         <div class="tab-pane fade" id="template" role="tabpanel" aria-labelledby="template-tab">
-                            準備中
+                            <div class="container">
+                                <table>
+                                  <tr>
+                                    <th class="rounded">
+                                        <div class="card" style="width: 112px;">
+                                            <button id="templateBtn0" type="button" class="templateBtn btn rounded-square">
+                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp0.png?raw=true">
+                                                <div class="card-body">
+                                                <p class="card-text text-center" style="height: 3rem;"><small>アイテム角＆<br>横向き</small></p>
+                                                </div>
+                                            </button>
+                                        </div>
+                                    </th>
+                                    <th class="rounded">
+                                        <div class="card" style="width: 112px;">
+                                            <button id="templateBtn1" type="button" class="templateBtn btn rounded-square">
+                                                <img class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp1.png?raw=true">
+                                                <div class="card-body">
+                                                <p class="card-text text-center" style="height: 3rem;"><small>アイテム丸＆<br>横向き</small></p>
+                                                </div>
+                                            </button>
+                                        </div>
+                                    </th>
+                                    <th class="rounded">
+                                        <div class="card" style="width: 112px;">
+                                            <button id="templateBtn2" type="button" class="templateBtn btn rounded-square">
+                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp2.png?raw=true">
+                                                <div class="card-body">
+                                                <p class="card-text text-center" style="height: 3rem;"><small>アイテム角＆<br>タテ向き</small></p>
+                                                </div>
+                                            </button>
+                                        </div>
+                                    </th>
+                                    <th class="rounded">
+                                        <div class="card" style="width: 112px;">
+                                            <button id="templateBtn3" type="button" class="templateBtn btn rounded-square">
+                                                <img id="" class="rounded mx-auto d-blockd" style = "width: 88px; height: 88px;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/temp3.png?raw=true">
+                                                <div class="card-body">
+                                                <p class="card-text text-center" style="height: 3rem;"><small>アイテム丸＆<br>タテ向き</small></p>
+                                                </div>
+                                            </button>
+                                        </div>
+                                    </th>
+                                  </tr>
+                                </table>
+                              </div>
+                            <!-- <div class="card" style="width: 110px;">
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="110px" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect fill="#868e96" width="100%" height="100%"/><text fill="#dee2e6" dy=".5em" x="40%" y="50%">aaa</text></svg>
+                                <div class="card-body">
+                                  <p class="card-text text-center"><small>デフォルトooooooooo</small></p>
+                                </div>
+                            </div> -->
                         </div>
+                        
                     </div>
 
                 </div>
@@ -202,7 +255,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800"
+                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400"
                                         height="300" xmlns="http://www.w3.org/2000/svg"
                                         preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
                                         aria-label="Placeholder: 準備中">
@@ -210,13 +263,13 @@
                                         <rect width="100%" height="100%" fill="#777" /><text x="43%" y="50%" fill="#555"
                                             dy=".3em">準備中</text>
                                     </svg>
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>準備中 label</h5>
-                                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                                    <div class="carousel-caption">
+                                        <h5>準備中</h5>
+                                        <p>ここに説明文を入れる予定だよ</p>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800"
+                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400"
                                         height="300" xmlns="http://www.w3.org/2000/svg"
                                         preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
                                         aria-label="Placeholder: 準備中">
@@ -226,7 +279,7 @@
                                     </svg>
                                 </div>
                                 <div class="carousel-item">
-                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="800"
+                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400"
                                         height="300" xmlns="http://www.w3.org/2000/svg"
                                         preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
                                         aria-label="Placeholder: 準備中">
