--- a/index.html
+++ b/index.html
@@ -240,61 +240,49 @@
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="infoModalCenterTitle">ツールの使い方</h5>
+                        <h5 class="modal-title" id="infoModalCenterTitle">ヘルプ</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
 
-                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <div id="carouselHelpIndicators" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                <li data-target="#carouselHelpIndicators" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselHelpIndicators" data-slide-to="1"></li>
+                                <li data-target="#carouselHelpIndicators" data-slide-to="2"></li>
+                                <li data-target="#carouselHelpIndicators" data-slide-to="3"></li>
+                                <li data-target="#carouselHelpIndicators" data-slide-to="4"></li>
+                                <li data-target="#carouselHelpIndicators" data-slide-to="5"></li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400"
-                                        height="300" xmlns="http://www.w3.org/2000/svg"
-                                        preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
-                                        aria-label="Placeholder: 準備中">
-                                        <title>Placeholder</title>
-                                        <rect width="100%" height="100%" fill="#777" /><text x="43%" y="50%" fill="#555"
-                                            dy=".3em">準備中</text>
-                                    </svg>
-                                    <div class="carousel-caption">
-                                        <h5>準備中</h5>
-                                        <p>ここに説明文を入れる予定だよ</p>
-                                    </div>
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info1.PNG?raw=true">
                                 </div>
                                 <div class="carousel-item">
-                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400"
-                                        height="300" xmlns="http://www.w3.org/2000/svg"
-                                        preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
-                                        aria-label="Placeholder: 準備中">
-                                        <title>Placeholder</title>
-                                        <rect width="100%" height="100%" fill="#666" /><text x="43%" y="50%" fill="#444"
-                                            dy=".3em">準備中</text>
-                                    </svg>
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info2.PNG?raw=true">
                                 </div>
                                 <div class="carousel-item">
-                                    <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400"
-                                        height="300" xmlns="http://www.w3.org/2000/svg"
-                                        preserveAspectRatio="xMidYMid slice" focusable="false" role="img"
-                                        aria-label="Placeholder: 準備中">
-                                        <title>Placeholder</title>
-                                        <rect width="100%" height="100%" fill="#555" /><text x="43%" y="50%" fill="#333"
-                                            dy=".3em">準備中</text>
-                                    </svg>
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info3.PNG?raw=true">
                                 </div>
+                                <div class="carousel-item">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info4.PNG?raw=true">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info5.PNG?raw=true">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info6.PNG?raw=true">
+                                </div>
+
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                            <a class="carousel-control-prev" href="#carouselHelpIndicators" role="button"
                                 data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                            <a class="carousel-control-next" href="#carouselHelpIndicators" role="button"
                                 data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
@@ -303,7 +291,9 @@
 
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">ツールに戻る</button>
+                        <button type="button" class="btn btn-secondary" onclick="location.href='https://forms.gle/31NATnDdpxgc71Zr9'">お問い合わせ</button>
+                        
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">ツールに戻る</button>
                     </div>
                 </div>
             </div>
