--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@wasabiPigg" />
     <meta name="twitter:description" content="ピグパーティのコーデ加工を自動でするツールです。" />
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="icon" href="img/favicon.ico"> -->
     <link rel="stylesheet" href="css/style.css">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
@@ -29,15 +28,10 @@
     <!-- bootstrap -->
     <meta charset="utf-8">
     <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- BootstrapのJS読み込み -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -58,7 +52,7 @@
         <form name="modeEdit">
             <h5 id="titleLabel" class="text-center border-bottom">
                 コーデ加工ツール
-                <i data-toggle="modal" data-target="#infoModalCenter" class="fas fa-question-circle"
+                <i data-bs-toggle="modal" data-bs-target="#infoModalCenter" class="fas fa-question-circle"
                     style="color: #707070;"></i>
             </h5>
 
@@ -102,19 +96,19 @@
                 <div>
                     <ul class="nav nav-tabs" id="myTab" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="bg-tab" data-toggle="tab" href="#bg" role="tab"
+                            <a class="nav-link active" id="bg-tab" data-bs-toggle="tab" href="#bg" role="tab"
                                 aria-controls="bg" aria-selected="true">背景</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="shadow-tab" data-toggle="tab" href="#shadow" role="tab"
+                            <a class="nav-link" id="shadow-tab" data-bs-toggle="tab" href="#shadow" role="tab"
                                 aria-controls="shadow" aria-selected="false">かげ・ふち</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="template-tab" data-toggle="tab" href="#template" role="tab"
+                            <a class="nav-link" id="template-tab" data-bs-toggle="tab" href="#template" role="tab"
                                 aria-controls="template" aria-selected="false">テンプレ</a>
                         </li>
                     </ul>
-                    <div class="tab-content border-left border-right border-bottom rounded-bottom" id="myTabContent">
+                    <div class="tab-content border-start border-end border-bottom rounded-bottom" id="myTabContent">
                         <div class="tab-pane fade show active" id="bg" role="tabpanel" aria-labelledby="bg-tab">
                             <div class="text-center">
                                 <span id="colorButtons">
@@ -126,25 +120,25 @@
                                         style="width: 40px;height: 40px;"></button>
                                     <button id="colorBtn3" type="button" class="btn rounded-square"
                                         style="width: 40px;height: 40px;"></button>
-                                    <button id="colorBtn5" type="button" class="btn rounded-square"
+                                    <button id="colorBtn5" type="button" class="btn rounded-square btn-light"
                                         style="width: 40px;height: 40px;"><span id="backgroundIc"
                                             class="fas fa-image fa-xs"></span></button>
-                                    <button id="colorBtn4" type="button" class="btn rounded-square"
+                                    <button id="colorBtn4" type="button" class="btn rounded-square btn-light"
                                         style="width: 40px;height: 40px;"><span
                                             class="fas fa-eye-slash fa-xs"></span></button>
                                 </span>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="shadow" role="tabpanel" aria-labelledby="shadow-tab">
-                            <div class="text-center form-group">
-                                <label for="shadowControl">かげ</label>
-                                <input type="range" class="custom-range" min="0" max="10" step="0.5" id="shadowControl">
-                                <label for="shadowControl" id="shadowValue"></label>
+                            <div class="d-flex justify-content-center my-2">
+                                <label class="mx-2" for="shadowControl">かげ</label>
+                                <input class="mx-2" type="range" class="custom-range" min="0" max="10" step="0.5" id="shadowControl">
+                                <label class="mx-2" for="shadowControl" id="shadowValue"></label>
                             </div>
-                            <div class="text-center">
-                                <label for="fuchiControl">ふち</label>
-                                <input type="range" class="custom-range" min="0" max="10" step="0.5" id="fuchiControl">
-                                <label for="fuchiControl" id="fuchiValue">5</label>
+                            <div class="d-flex justify-content-center my-2">
+                                <label class="mx-2" for="fuchiControl">ふち</label>
+                                <input class="mx-2" type="range" class="custom-range" min="0" max="10" step="0.5" id="fuchiControl">
+                                <label class="mx-2" for="fuchiControl" id="fuchiValue">5</label>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="template" role="tabpanel" aria-labelledby="template-tab">
@@ -208,8 +202,8 @@
             </div>
         </form>
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" id="chgImgBtn" data-toggle="modal"
-            data-target="#completeModalCenter" onclick="createPng()" style="display: none;">
+        <button type="button" class="btn btn-primary" id="chgImgBtn" data-bs-toggle="modal"
+            data-bs-target="#completeModalCenter" onclick="createPng()" style="display: none;">
             編集完了する！
         </button>
 
@@ -220,8 +214,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="completeModalCenterTitle">編集お疲れ様でした！</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
                         </button>
                     </div>
                     <div class="modal-body">
@@ -230,7 +223,7 @@
                         <div class="text-center" id="saveHint">画像を長押しで保存できます</div>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">編集に戻る</button>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">編集に戻る</button>
                     </div>
                 </div>
             </div>
@@ -241,21 +234,19 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="infoModalCenterTitle">ヘルプ</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
 
-                        <div id="carouselHelpIndicators" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <li data-target="#carouselHelpIndicators" data-slide-to="0" class="active"></li>
-                                <li data-target="#carouselHelpIndicators" data-slide-to="1"></li>
-                                <li data-target="#carouselHelpIndicators" data-slide-to="2"></li>
-                                <li data-target="#carouselHelpIndicators" data-slide-to="3"></li>
-                                <li data-target="#carouselHelpIndicators" data-slide-to="4"></li>
-                                <li data-target="#carouselHelpIndicators" data-slide-to="5"></li>
-                            </ol>
+                        <div id="carouselHelpIndicators" class="carousel slide">
+                            <div class="carousel-indicators">
+                                <button data-bs-target="#carouselHelpIndicators" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button>
+                                <button data-bs-target="#carouselHelpIndicators" data-bs-slide-to="1"></button>
+                                <button data-bs-target="#carouselHelpIndicators" data-bs-slide-to="2"></button>
+                                <button data-bs-target="#carouselHelpIndicators" data-bs-slide-to="3"></button>
+                                <button data-bs-target="#carouselHelpIndicators" data-bs-slide-to="4"></button>
+                                <button data-bs-target="#carouselHelpIndicators" data-bs-slide-to="5"></button>
+                            </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block rounded" style="width: 100%; height: 100%;" src="https://github.com/wasabiPigg/outfitImgAutomation/blob/master/img/info1.PNG?raw=true">
@@ -278,12 +269,12 @@
 
                             </div>
                             <a class="carousel-control-prev" href="#carouselHelpIndicators" role="button"
-                                data-slide="prev">
+                                data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
                             <a class="carousel-control-next" href="#carouselHelpIndicators" role="button"
-                                data-slide="next">
+                                data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
@@ -292,8 +283,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" onclick="location.href='https://forms.gle/31NATnDdpxgc71Zr9'">お問い合わせ</button>
-                        
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">ツールに戻る</button>
+                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">ツールに戻る</button>
                     </div>
                 </div>
             </div>
