黒猫さんのテンプレ少し編集

--- a/beta.html
+++ b/beta.html
@@ -378,10 +378,10 @@
                     <div class="mb-3">
                         <label>フレーム</label>
                         <div id="frameButtonsKuroneko" class="row row-cols-auto">
-                            <button id="frameBtnKuroneko0" type="button" class="btn rounded-square col" style="width: 40px;height: 40px; background-color: #707070;"></button>
-                            <button id="frameBtnKuroneko1" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"></button>
-                            <button id="frameBtnKuroneko2" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"></button>
-                            <button id="frameBtnKuroneko3" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko0" type="button" class="btn rounded-square col" style="width: 70px;height: 70px; background-color: #707070;"></button>
+                            <button id="frameBtnKuroneko1" type="button" class="btn rounded-square col" style="width: 70px;height: 70px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko2" type="button" class="btn rounded-square col" style="width: 70px;height: 70px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko3" type="button" class="btn rounded-square col" style="width: 70px;height: 70px;  background-color: #707070"></button>
                         </div>
                     </div>
                 </form>
@@ -395,7 +395,11 @@
     <!-- JS読み込み -->
     <script async src="js/opencv.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
+    <script src="js/first.js"></script>
+    <script src="js/imageLoad.js"></script>
     <script src="js/editTemplateDetail.js"></script>
+    <script src="js/drawBg/drawKuronekoBg.js"></script>
+    <script src="js/drawBg/drawMiyaBg.js"></script>
     <script src="js/beta_main.js"></script>
 </body>
 
