--- a/beta.html
+++ b/beta.html
@@ -148,7 +148,7 @@
                             <div class="d-flex justify-content-center my-2">
                                 <label class="mx-2" for="fuchiControl">ふち</label>
                                 <input class="mx-2" type="range" class="custom-range" min="0" max="10" step="0.5" id="fuchiControl">
-                                <label class="mx-2" for="fuchiControl" id="fuchiValue">5</label>
+                                <label class="mx-2" for="fuchiControl" id="fuchiValue"></label>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="template" role="tabpanel" aria-labelledby="template-tab">
