みやさんのデザイン用にアイテム表示

--- a/beta.html
+++ b/beta.html
@@ -85,6 +85,7 @@
                 <div><canvas id="canvasItemHc" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasItemVs" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasItemVc" class="rounded" style="display: none;"></canvas></div>
+                <div><canvas id="canvasItemMiya" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvas" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasAvator" class="rounded" style="display: none;"></canvas></div>
                 <div><canvas id="canvasBackgroundImg" class="rounded" style="display: none;"></canvas></div>
