黒猫さんのテンプレ修正

--- a/beta.html
+++ b/beta.html
@@ -392,6 +392,11 @@
             </div>
         </div>
     </div>
+    <div style="display: none;" id="noneDiv">
+        <canvas id="kuronekoBg"></canvas>
+        <canvas id="kuronekoNullItemImg"></canvas>
+        <canvas id="kuronekoItemList"></canvas>
+    </div>
     </section>
     <!-- JS読み込み -->
     <script async src="js/opencv.js"></script>
