みやさんのデザインを編集

--- a/beta.html
+++ b/beta.html
@@ -396,6 +396,8 @@
         <canvas id="kuronekoBg"></canvas>
         <canvas id="kuronekoNullItemImg"></canvas>
         <canvas id="kuronekoItemList"></canvas>
+        <canvas id="miyaBg"></canvas>
+
     </div>
     </section>
     <!-- JS読み込み -->
