キラキラ表示、色ボタン追加

--- a/beta.html
+++ b/beta.html
@@ -379,10 +379,12 @@
                     <div class="mb-3">
                         <label>フレーム</label>
                         <div id="frameButtonsKuroneko" class="row row-cols-auto">
-                            <button id="frameBtnKuroneko0" type="button" class="btn rounded-square col" style="width: 70px;height: 70px; background-color: #707070;"></button>
-                            <button id="frameBtnKuroneko1" type="button" class="btn rounded-square col" style="width: 70px;height: 70px;  background-color: #707070"></button>
-                            <button id="frameBtnKuroneko2" type="button" class="btn rounded-square col" style="width: 70px;height: 70px;  background-color: #707070"></button>
-                            <button id="frameBtnKuroneko3" type="button" class="btn rounded-square col" style="width: 70px;height: 70px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko0" type="button" class="btn rounded-square col" style="width: 40px;height: 40px; background-color: #f8f8f8;"></button>
+                            <button id="frameBtnKuroneko1" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko2" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko3" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko4" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"></button>
+                            <button id="frameBtnKuroneko5" type="button" class="btn rounded-square col" style="width: 40px;height: 40px;  background-color: #707070"><span id="backgroundIc" class="fas fa-image fa-xs"></span></button>
                         </div>
                     </div>
                 </form>
